[metadata]
name = clinical-note-review
version = 0.1.0
description = A tool for reviewing clinical notes alongside model predictions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/clinical-note-review
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
install_requires =
    pandas>=1.3.0
    azure-storage-blob>=12.9.0

[options.extras_require]
dev =
    black
    flake8
    isort
    pytest
    pytest-cov 